Fixed the spreadsheet tollbars format button spacing and reoreded the colour picker buttons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2747,6 +2747,9 @@ spinner {
 .k-toolbar .k-button {
   padding: 4px 6px !important;
 }
+.k-spreadsheet-toolbar>.k-widget[data-property=format] {
+  width: 100px !important;
+}
 .k-spreadsheet .k-tabstrip-wrapper .k-tabstrip-items {
   padding-top: 0 !important;
 }
